# travellermap-dl

./: .gitignore  README.md  api_models.py  db_models.py  pyproject.toml  tmdownload.py
data/: atmospheres.json  governments.json  hydrospheres.json  law_levels.json  populations.json  sizes.json  starports.json  tech_levels.json
