[project]
name = "travmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
     "SQLAlchemy",
     "httpx",
     "pydantic",
     "python-json-logger",
     "tqdm",
     "yarl",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "PLR2004", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pyright]
include = ["*.py"]
pythonVersion = "3.13"