[project]
name = "travmap"
version = "0.1.0"
description = "Download sector data from https://travellermap.com"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
     "SQLAlchemy~=2.0",
     "brunns-row~=2.0",
     "httpx[http2]~=0.28",
     "pydantic~=2.0",
     "python-json-logger~=3.0",
     "tqdm~=4.0",
     "yarl~=1.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "PLR2004", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pyright]
include = ["*.py"]
pythonVersion = "3.14"
